Fixed menu spacing

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -22,7 +22,7 @@
 
       .logo {
         font-size: 40px;
-        font-weight: 700;
+        font-weight: 900;
         color: inherit;
       }
     }
@@ -30,6 +30,13 @@
     .right {
       display: flex;
       align-items: center;
+
+      .menu {
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-auto-flow: column;
+        justify-items: center;
+      }
 
       .hamburger {
         width: 32px;
@@ -51,7 +58,7 @@
   }
 
   .wrapper * {
-    font-size: 40px;
+    font-size: 30px;
     a {
       padding: 0px 30px 0px 30px;
       text-decoration: none;
